<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2B33"
    tools:context=".FiltersActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="100dp"
        android:background="#383542"
        android:contentDescription="@string/imgView"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/startThreePointsBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_round_draw_24"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/start"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/finishThreePointsBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_round_refresh_24"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/finish"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/bilinearBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_round_filter_1_24"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/bilinear"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/startThreePointsBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/trilinearBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_round_filter_3_24"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/trilinear"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/finishThreePointsBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/affineBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:drawableTop="@drawable/ic_round_filter_2_24"
        android:fontFamily="@font/source_sans_pro_light"
        android:includeFontPadding="false"
        android:text="@string/affine"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/trilinearBtn"
        app:layout_constraintStart_toEndOf="@+id/bilinearBtn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>